--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
   "name": "wewin-backend",
   "version": "1.0.0",
-  "description": "WE WIN Backend - ส่งข้อมูลและไฟล์รูปไปยัง Telegram",
-  "main": "server.js",
   "type": "module",
+  "main": "app.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "dependencies": {
+    "axios": "^1.7.0",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
+    "express": "^4.18.2",
     "form-data": "^4.0.0",
     "multer": "^1.4.5-lts.1"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "author": "WeWin-TH",
-  "license": "MIT"
+  }
 }
